--- a/zahid.ipynb
+++ b/zahid.ipynb
@@ -31,7 +31,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "%run zahid.py"
       ],
       "execution_count": 0,
       "outputs": []
