--- a/zahid.ipynb
+++ b/zahid.ipynb
@@ -2,48 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    t  Entity  Is_Moving   Drive Drive-Object Drive-Target\n",
-      "0   1   Sally       True    None         None         None\n",
-      "1   1    Anne       True    None         None         None\n",
-      "2   1  Basket      False    None         None         None\n",
-      "3   1     Box      False    None         None         None\n",
-      "4   2   Sally       True    Hide         Ball       Basket\n",
-      "5   2    Anne       True    None         None         None\n",
-      "6   2  Basket      False    None         None         None\n",
-      "7   2     Box      False    None         None         None\n",
-      "8   2    Ball      False    None         None         None\n",
-      "9   3    Anne       True    None         None         None\n",
-      "10  3  Basket      False    None         None         None\n",
-      "11  3     Box      False    None         None         None\n",
-      "12  4    Anne       True     Get         Ball       Basket\n",
-      "13  4  Basket      False    None         None         None\n",
-      "14  4     Box      False    None         None         None\n",
-      "15  4    Ball      False    None         None         None\n",
-      "16  5    Anne       True    Hide         Ball          Box\n",
-      "17  5  Basket      False    None         None         None\n",
-      "18  5     Box      False    None         None         None\n",
-      "19  5    Ball      False    None         None         None\n",
-      "20  6   Sally       True  Search         Ball         None\n",
-      "21  6     Box      False    None         None         None\n",
-      "22  6  Basket      False    None         None         None\n"
-     ]
+     "evalue": "Error: Failed to connect to Jupyter notebook. \r\nhttp://localhost:8888/\r\nError: Invalid response: 500 Internal Server Error",
+     "output_type": "error"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "visual_df = pd.read_csv('input/visual.txt',\n",
-    "                        delim_whitespace=True,\n",
-    "                        comment='#')\n",
-    "print(visual_df)"
+    "%run zahid.py"
    ]
   },
   {
