--- a/zahid.ipynb
+++ b/zahid.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,47 @@
       "To quit the simulation: 'q'\n",
       "\n",
       "This is mind step 1.\n",
-      "Scene 1: Sally and Anne are in the room. Basket, box and ball are on the floor.\n"
+      "Scene 1: Sally and Anne are in the room. Basket, box and ball are on the floor.\n",
+      "Enter command: p\n",
+      "About what person you want to know about?\n",
+      "{'Anne', 'Sally'}\n",
+      "Sally\n",
+      "\n",
+      "Sally Believes Anne Exists\n",
+      "Sally Believes Ball Hides\n",
+      "Sally Believes Basket Contains\n",
+      "Sally Believes Box Contains\n",
+      "\n",
+      "Enter command: \n",
+      "\n",
+      "This is mind step 2.\n",
+      "Scene 2: Sally reaches for the ball. \n",
+      "Enter command: p\n",
+      "About what person you want to know about?\n",
+      "{'Anne', 'Sally'}\n",
+      "Anne\n",
+      "\n",
+      "Anne Believes Ball OnHand Of Sally\n",
+      "Anne Believes Basket Contains\n",
+      "Anne Believes Box Contains\n",
+      "Anne Believes Sally Exists\n",
+      "\n",
+      "Enter command: \n",
+      "\n",
+      "This is mind step 3.\n",
+      "Scene 3: Sally puts the ball in the basket.\n",
+      "Enter command: p\n",
+      "About what person you want to know about?\n",
+      "{'Anne', 'Sally'}\n",
+      "Sally\n",
+      "\n",
+      "Sally Believes Anne Exists\n",
+      "Sally Believes Ball HiddenIn Basket\n",
+      "Sally Believes Basket Contains\n",
+      "Sally Believes Box Contains\n",
+      "\n",
+      "Enter command: q\n",
+      "Simulation ended\n"
      ]
     }
    ],
