Refactored project -> CogTom

--- a/cogtom.ipynb
+++ b/cogtom.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Zahid - a computational implementation of the Theory of Mind model.  "
+    "### CogTom - a computational implementation of the Theory of Mind model.  "
    ]
   },
   {
@@ -281,10 +281,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Zahid - a computational implementation of the Theory of Mind model\n",
+      "CogTom - a computational implementation of the Theory of Mind model\n",
       "\n",
       "Starting simulation. Mind Steps = 9\n",
-      "Hello, I am Zahid.\n",
+      "Hello, I am CogTom.\n",
       "\n",
       "This is the list of commands I understand.\n",
       "To ask me about people: 'p'\n",
@@ -338,7 +338,7 @@
     }
    ],
    "source": [
-    "%run zahid.py"
+    "%run cogtom.py"
    ]
   },
   {
